@@ -1,3 +1,5 @@
+2006-10-04:
+	- improve the space checking/logging
 2006-09-29:
 	- typo fix (thanks to Jane Silber) (lp: #62946)
 2006-09-28:
